--- a/src/components/Carrosel6/style.module.css
+++ b/src/components/Carrosel6/style.module.css
@@ -15,17 +15,21 @@
         h1 {
             color: white;
             font-size: 40px;
+
             @media (max-width:860px) {
                 font-size: 35px;
             }
+
             @media (max-width:760px) {
                 font-size: 30px;
             }
+
             @media (max-width:620px) {
-                font-size:25px;
+                font-size: 25px;
             }
+
             @media (max-width:590px) {
-                font-size:20px;
+                font-size: 20px;
             }
         }
 
@@ -40,18 +44,20 @@
             justify-content: center;
             gap: 15px;
 
-             @media (max-width:760px) {
-              max-width: 120px;
+            @media (max-width:760px) {
+                max-width: 110px;
             }
+
             .btnmover {
                 background: transparent;
                 border: none;
                 cursor: pointer;
                 transition: all 0.5s;
                 color: white;
-                  @media (max-width:760px) {
-              size: 30px;
-            }
+
+                @media (max-width:760px) {
+                    size: 30px;
+                }
 
                 svg {
                     transition: color 0.5s ease;
@@ -80,8 +86,10 @@
     padding: 15px;
     border-radius: 15px;
     display: grid;
-    grid-template-columns: repeat(6, 1fr); /* Inicialmente 6 itens por linha */
-    transition: transform 0.5s ease; /* Transição suave ao mudar o número de colunas */
+    grid-template-columns: repeat(6, 1fr);
+    /* Inicialmente 6 itens por linha */
+    transition: transform 0.5s ease;
+    /* Transição suave ao mudar o número de colunas */
     gap: 10px;
     flex: 1;
     margin: 12px;
@@ -91,31 +99,36 @@
 /* Responsividade - ajusta o número de colunas conforme a largura da tela */
 @media (max-width: 1200px) {
     .carrosselItens {
-        grid-template-columns: repeat(5, 1fr); /* 5 itens por linha */
+        grid-template-columns: repeat(5, 1fr);
+        /* 5 itens por linha */
     }
 }
 
 @media (max-width: 1000px) {
     .carrosselItens {
-        grid-template-columns: repeat(4, 1fr); /* 4 itens por linha */
+        grid-template-columns: repeat(4, 1fr);
+        /* 4 itens por linha */
     }
 }
 
 @media (max-width: 800px) {
     .carrosselItens {
-        grid-template-columns: repeat(3, 1fr); /* 3 itens por linha */
+        grid-template-columns: repeat(3, 1fr);
+        /* 3 itens por linha */
     }
 }
 
 @media (max-width: 600px) {
     .carrosselItens {
-        grid-template-columns: repeat(2, 1fr); /* 2 itens por linha */
+        grid-template-columns: repeat(2, 1fr);
+        /* 2 itens por linha */
     }
 }
 
 @media (max-width: 400px) {
     .carrosselItens {
-        grid-template-columns: 1fr; /* 1 item por linha */
+        grid-template-columns: 1fr;
+        /* 1 item por linha */
     }
 }
 
